demo code/Delphi/dlbt.pas


function DLBT_Downloader_Initialize_FromTorrentHandle(
                                                  torrentHandle: HANDLE;                                            //种子句柄
                                                  outPath: LPCWSTR;                                                  //保存目录
                                                  statusFile: LPCWSTR;                                         //状态文件路径
                                                  fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;
                                                  bPaused: BOOL = False;
                                                  bQuickSeed: BOOL = False;
                                                  rootPathName: LPCWSTR = nil;                                        // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                                                                                   // 对单个文件则直接进行改名为指定的这个名字
				                                          bPrivateProtocol: boolean = FALSE;					// 该种子是否私有协议（可以对不同种子采用不同的下载方式）
                                                  bZipTransfer:Boolean = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
                                                  ): HANDLE; stdcall;

//（无种子模式在试用版中无效，可以调用这些接口，但不会有效果）
function DLBT_Downloader_Initialize_FromInfoHash (
						                                    trackerURL: LPCSTR;                                            // tracker的地址
                                                infoHash:LPCSTR;                                                 // 文件的infoHash值
                                                outPath: LPCWSTR;                                                  //保存目录
					                                     	name:LPCWSTR = nil;                                            // 在下载到种子之前，是没有办法知道名字的，因此可以传入一个临时的名字
						                                    statusFile: LPCWSTR = nil;                                         //状态文件的路径，建议传入一个地址，以便使用快速扫描
                                                fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;  // 文件分配模式
                                                bPaused: BOOL = False;
						                                    rootPathName: LPCWSTR = nil;                                        // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                                                                                   // 对单个文件则直接进行改名为指定的这个名字
				                                        bPrivateProtocol: boolean = FALSE;					// 该种子是否私有协议（可以对不同种子采用不同的下载方式）
                                                bZipTransfer:Boolean = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
						): HANDLE; stdcall;

// 无种子模式的另一个接口，可以直接通过地址下载，地址格式为： DLBT://xt=urn:btih: Base32 编码过的info-hash [ &dn= Base32后的名字 ] [ &tr= Base32后的tracker的地址 ]  ([]为可选参数)
// 完全遵循uTorrent的官方BT扩展协议
function DLBT_Downloader_Initialize_FromUrl (
						                                    url: LPCSTR;                                           // 网址
                                                outPath: LPCWSTR;                                                  //保存目录
						                                    statusFile: LPCWSTR = nil;                                         //状态文件的路径，建议传入一个地址，以便使用快速扫描
                                                fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;  // 文件分配模式
                                                bPaused: BOOL = False;
					                                     	rootPathName: LPCWSTR = nil;                                        // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                                                                                   // 对单个文件则直接进行改名为指定的这个名字
				                                        bPrivateProtocol: boolean = FALSE;					// 该种子是否私有协议（可以对不同种子采用不同的下载方式）
                                                bZipTransfer:Boolean = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
						                                ): HANDLE; stdcall;

// 专业文件更新接口，任务以新老种子文件为基础，更新新种子文件相对老种子文件变化过的数据块。仅商业版中提供
function DLBT_Downloader_InitializeAsUpdater ( 
						curTorrentFile: LPCWSTR;                   //当前版本的种子文件 
						newTorrentFile: LPCWSTR;                   //新版种子文件 
						curPath: LPCWSTR;                          //当前文件的路径 
						statusFile: LPCWSTR = nil;                 //状态文件的路径，建议传入一个地址，以便使用快速扫描
						fileAllocateType: DLBT_FILE_ALLOCATE_TYPE = FILE_ALLOCATE_SPARSE;  // 文件分配模式
						bPaused: BOOL = False;
						curTorrentPassword: LPCSTR = nil;           // 当前版本种子的密码（如果加密了才需要传入）
						newTorrentFilePassword: LPCSTR = nil;           // 新种子的密码
						rootPathName: LPCWSTR = nil;             // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
						bPrivateProtocol: boolean = FALSE;	// 该种子是否私有协议（可以对不同种子采用不同的下载方式）
						fProgress:PDouble = nil;                 //如果不为NULL，则传出和DLBT_Downloader_GetOldTorrentProgress一样的一个进度
            bZipTransfer:Boolean = FALSE		// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
						): HANDLE; stdcall;

// 专业文件更新时，传入新老种子，然后直接传出老种子和新种子的差异情况（进度），如果进度是99%，则意味着只有1%的数据需要下载。
function DLBT_Downloader_GetOldTorrentProgress (
						curTorrentFile: LPCWSTR;                   //当前版本的种子文件 
						newTorrentFile: LPCWSTR;                   //新版种子文件 
						curPath: LPCWSTR;                          //当前文件的路径 
						statusFile: LPCWSTR = nil;                 //状态文件的路径，建议传入一个地址，以便使用快速扫描
						curTorrentPassword: LPCSTR = nil;           // 当前版本种子的密码（如果加密了才需要传入）
						newTorrentFilePassword: LPCSTR = nil           // 新种子的密码
						):Double; stdcall;


// 关闭任务之前，可以调用该函数停掉IO线程对该任务的操作（异步的，需要调用DLBT_Downloader_IsReleasingFiles函数来获取是否还在释放中）。
// 该函数调用后，请直接调用_Release，不可对该句柄再调用其它DLBT_Dwonloader函数。本函数内部会先暂停所有数据下载，然后释放掉文件句柄
procedure DLBT_Downloader_ReleaseAllFiles(hDownloader: HANDLE); stdcall;
// 是否还在释放句柄的过程中
function DLBT_Downloader_IsReleasingFiles(hDownloader: HANDLE): BOOL; stdcall;

// 关闭hDownloader所标记的下载任务,如果需要删除文件,可以将第2个参数置为True
function  DLBT_Downloader_Release(hDownloader: HANDLE; nFlag:DLBT_RELEASE_FLAG = DLBT_RELEASE_NO_WAIT): HRESULT; stdcall;

// 增加一个http的地址，当该下载文件在某个Web服务器上有http下载时可以使用，web服务器的编码方式最好为UTF-8，如果是其它格式可以联系点量软件进行修改
procedure DLBT_Downloader_AddHttpDownload(hDownloader: HANDLE; url: LPSTR ); stdcall;

// 移除一个P2SP的地址，如果正在下载中，会进行断开并且从候选者列表中移除，不再进行重试
procedure DLBT_Downloader_RemoveHttpDownload (hDownloader: HANDLE; url: LPSTR); stdcall;

// 设置一个Http地址，最多可以建立多少个连接，默认是1个连接. 如果服务器性能好，可以酌情设置，比如设置10个，则是对一个Http地址，可以建立10个连接。
// 设置之前如果已经一个Http地址建立好了多个连接，则不再断开，仅对设置后再新建连接时生效
procedure  DLBT_Downloader_SetMaxSessionPerHttp (hDownloader: HANDLE; limit: int); stdcall;

// 获取本任务所有的Http连接，内存必须调用DLBT_Downloader_FreeConnections释放
procedure DLBT_Downloader_GetHttpConnections(hDownloader:HANDLE; urls:PPLPSTR; urlCount:pinteger); stdcall;
// 释放DLBT_Downloader_GetHttpConnections传出的内存
procedure DLBT_Downloader_FreeConnections(urls:PLPSTR; urlCount:int); stdcall;

procedure DLBT_Downloader_AddTracker (hDownloader:HANDLE; url:LPCSTR; tier:int); stdcall;
procedure DLBT_Downloader_RemoveAllTracker (hDownloader:HANDLE); stdcall;
procedure DLBT_Downloader_AddHttpTrackerExtraParams (hDownloader:HANDLE; extraParams:LPCSTR); stdcall;

// 设置任务下载是否按顺序下载,默认是非顺序下载(随机的下载,一般遵循稀有者优先,这种方式速度快),但顺序下载适用于边下边播放
procedure DLBT_Downloader_SetDownloadSequence(hDownloader: HANDLE; ifSeq: boolean = FALSE); stdcall;

// 下载的状态 以及 暂停和继续的接口
function  DLBT_Downloader_GetState(hDownloader: HANDLE): DLBT_DOWNLOAD_STATE; stdcall;
function  DLBT_Downloader_IsPaused(hDownloader: HANDLE): boolean; stdcall;
procedure DLBT_Downloader_Pause(hDownloader: HANDLE); stdcall;                //暂停
procedure DLBT_Downloader_Resume(hDownloader: HANDLE); stdcall;               //继续

//出错状态下的两个接口 （一般只有在极其特殊情况下文件无法写入时才会出错，比如磁盘满了）
//如果任务的状态为BTDS_ERROR，通过该接口获取详细错误信息
function DLBT_Downloader_GetLastError (
		      hDownloader:HANDLE;  // 任务句柄
		      pBuffer:LPSTR;      // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回名字的实际大小
		      pBufferSize: pinteger // 传入buffer的内存大小，传出名字的实际大小
		   ): HRESULT; stdcall;
   
//清除这个错误，尝试重新开始任务
procedure DLBT_Downloader_ResumeInError (hDownloader:HANDLE); stdcall; 

// 无种子下载的相关接口（无种子模式在试用版中无效，可以调用这些接口，但不会有效果）
function DLBT_Downloader_IsHaveTorrentInfo (hDownloader:HANDLE): boolean; stdcall; // 无种子下载时，用于判断是否成功获取到了种子信息
function DLBT_Downloader_MakeURL (  // 通过种子，制作一个可以不需要种子即可下载的网址，参考DLBT_Downloader_Initialize_FromUrl
		      hDownloader:HANDLE;  // 任务句柄
		      pBuffer:LPSTR;      // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回名字的实际大小
		      pBufferSize: pinteger // 传入buffer的内存大小，传出URL的实际大小    
		      ): HRESULT; stdcall;
// 无种子下载，如果已经下载到了种子，可以利用这个函数将种子保存起来，以后就能使用了
function DLBT_Downloader_SaveTorrentFile (hDownloader:HANDLE; filePath:LPCWSTR; password:LPCSTR = nil): HRESULT; stdcall;

// 下载的限速和限制连接的接口
procedure DLBT_Downloader_SetDownloadLimit(hDownloader: HANDLE; limit: int); stdcall;
procedure DLBT_Downloader_SetUploadLimit(hDownloader: HANDLE; limit: int); stdcall;
procedure DLBT_Downloader_SetMaxUploadConnections(hDownloader: HANDLE; limit: int); stdcall;
procedure DLBT_Downloader_SetMaxTotalConnections( limit: int); stdcall;

// 确保任务只上传，不下载
procedure DLBT_Downloader_SetOnlyUpload (hDownloader: HANDLE; bUpload:boolean); stdcall;

// 设置对服务器IP进行下载限速，单位是BYTE(字节），如果需要限速1M，请输入1024*1024
procedure DLBT_Downloader_SetServerDownloadLimit(hDownloader: HANDLE; limit: int); stdcall;
// 设置本任务不再去跟所有的服务器IP建立连接（对于对方连过来的连接，需要BT协议握手通过后，知道是对应于这个下载任务hDownloader的后才再断开）。
procedure DLBT_Downloader_BanServerDownload(hDownloader: HANDLE; limit: int); stdcall;

// 下载分享率 (上传/下载的比例）的接口
procedure DLBT_Downloader_SetShareRateLimit(hDownloader: HANDLE; fRate: single); stdcall;
function  DLBT_Downloader_GetShareRate(hDownloader: HANDLE): double; stdcall;

// 正在下载的文件的属性（文件大小、完成数、进度等）
function  DLBT_Downloader_GetTorrentName(
                                    hDownloader: HANDLE;
                                    pBuffer:LPCWSTR;
                                    pBufferSize:pinteger
                                    ): HRESULT; stdcall;
function  DLBT_Downloader_GetTotalFileSize(hDownloader: HANDLE): UINT64; stdcall;
function DLBT_Downloader_GetTotalWanted(hDownloader: HANDLE): Int64; stdcall;
function DLBT_Downloader_GetTotalWantedDone(hDownloader: HANDLE): Int64; stdcall;
function  DLBT_Downloader_GetProgress(hDownloader: HANDLE): single; stdcall;

function  DLBT_Downloader_GetDownloadedBytes(hDownloader: HANDLE): UINT64; stdcall;
function  DLBT_Downloader_GetUploadedBytes(hDownloader: HANDLE): UINT64; stdcall;
function  DLBT_Downloader_GetDownloadSpeed(hDownloader: HANDLE): DWORD; stdcall;
function  DLBT_Downloader_GetUploadSpeed(hDownloader: HANDLE): DWORD; stdcall;

// 获得该任务的节点的数目，数目的参数为int的指针，如果不想要某个值，则传NULL
procedure DLBT_Downloader_GetPeerNums(
                                      hDownloader: HANDLE;          // 下载任务的句柄
                                      connectedCount: pinteger;     // 该任务连接上的节点数（用户数）
                                      totalSeedCount: pinteger;     // 总的种子数目，如果Tracker不支持scrap，则返回-1
                                      seedsConnected: pinteger;     // 自己连上的种子数
                                      inCompleteCount: pinteger;     // 未下完的人数，如果Tracker不支持scrap，则返回-1
                                      totalCurrentSeedCount: PInteger;
                                      totalCurrentPeerCount: PInteger
                                      ); stdcall;
